Upgraded to rc1 Added some additional files

--- a/Legacy/src/Umbrella.Legacy.WebUtilities/project.json
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-beta8-build00017",
+  "version": "1.0.0-rc1-build00001",
   "description": "Umbrella.Legacy.WebUtilities Class Library",
   "authors": [ "richardedwards" ],
   "tags": [ "" ],
@@ -14,7 +14,7 @@
     }
   },
   "dependencies": {
-    "log4net": "2.0.3",
+    "log4net": "2.0.4",
     "Microsoft.AspNet.Identity.Owin": "2.2.1",
     "Microsoft.AspNet.Mvc": "5.2.3",
     "Microsoft.AspNet.WebApi": "5.2.3",
