--- a/DNX/Umbrella.DNX.WebUtilities/project.json
+++ b/DNX/Umbrella.DNX.WebUtilities/project.json
@@ -1,5 +1,5 @@
-﻿{
-  "version": "1.0.0-beta8-build00017",
+{
+  "version": "1.0.0-rc1-build00001",
   "description": "Umbrella.DNX.WebUtilities Class Library",
   "authors": [ "richardedwards" ],
   "tags": [ "" ],
@@ -9,7 +9,9 @@
     "dnx46": { }
   },
   "dependencies": {
-    "Microsoft.AspNet.Http": "1.0.0-beta8",
+    "Microsoft.AspNet.Hosting": "1.0.0-rc1-final",
+    "Microsoft.AspNet.Http": "1.0.0-rc1-final",
+    "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-rc1-final",
     "Umbrella.WebUtilities": "1.0.0-*"
   }
 }
