--- a/General/Umbrella.Utilities/project.json
+++ b/General/Umbrella.Utilities/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-beta8-build00017",
+  "version": "1.0.0-rc1-build00001",
   "description": "Umbrella.Utilities Class Library",
   "authors": [ "richardedwards" ],
   "tags": [ "" ],
@@ -22,7 +22,7 @@
     }
   },
   "dependencies": {
-    "log4net": "2.0.3",
+    "log4net": "2.0.4",
     "Newtonsoft.Json": "7.0.1",
     "Ninject": "3.2.2"
   }
