--- a/General/Umbrella.WebUtilities.DynamicImage/project.json
+++ b/General/Umbrella.WebUtilities.DynamicImage/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-beta8-build00017",
+  "version": "1.0.0-rc1-build00001",
   "description": "Umbrella.WebUtilities.DynamicImage Class Library",
   "authors": [ "richardedwards" ],
   "tags": [ "" ],
@@ -24,7 +24,7 @@
   "dependencies": {
     "AutoMapper": "4.1.1",
     "DynamicImage": "3.1.1",
-    "log4net": "2.0.3",
+    "log4net": "2.0.4",
     "Ninject": "3.2.2",
     "Umbrella.Utilities": "1.0.0-*"
   }
