--- a/General/Umbrella.WebUtilities/project.json
+++ b/General/Umbrella.WebUtilities/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-beta8-build00017",
+  "version": "1.0.0-rc1-build00001",
   "description": "Umbrella.WebUtilities Class Library",
   "authors": [ "richardedwards" ],
   "tags": [ "" ],
@@ -28,7 +28,7 @@
     }
   },
   "dependencies": {
-    "log4net": "2.0.3",
+    "log4net": "2.0.4",
     "Umbrella.Utilities": "1.0.0-*",
     "WebActivatorEx": "2.0.6"
   }
