--- a/Legacy/src/Umbrella.Legacy.WebUtilities.DynamicImage/project.json
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities.DynamicImage/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "version": "1.0.0-beta8-build00017",
+  "version": "1.0.0-rc1-build00001",
   "description": "Umbrella.Legacy.WebUtilities.DynamicImage Class Library",
   "authors": [ "richardedwards" ],
   "tags": [ "" ],
