--- a/N2CMS/src/Umbrella.N2/project.json
+++ b/N2CMS/src/Umbrella.N2/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-beta8-build00017",
+  "version": "1.0.0-rc1-build00001",
   "description": "Umbrella.N2.Utilities Class Library",
   "authors": [ "richardedwards" ],
   "tags": [ "" ],
@@ -13,7 +13,7 @@
     }
   },
   "dependencies": {
-    "N2CMS": "2.8.4",
+    "N2CMS": "2.9.3",
     "Newtonsoft.Json": "7.0.1",
     "Umbrella.Legacy.WebUtilities": "1.0.0-*",
     "Umbrella.Legacy.WebUtilities.DynamicImage": "1.0.0-*",
