Reorganized code to remove dependencies on log4net in Core and DNX libraries. Also removed dependencies on Ninject in the Core and DNX libraries Updated gitignore Incremented version to 1.0.0-rc1-build00003

--- a/General/Umbrella.DataAccess/project.json
+++ b/General/Umbrella.DataAccess/project.json
@@ -1,12 +1,12 @@
 {
-  "version": "1.0.0-rc1-build00002",
+  "version": "1.0.0-rc1-build00003",
   "description": "Umbrella.DataAccess Class Library",
   "authors": [ "richardedwards" ],
   "tags": [ "" ],
   "projectUrl": "",
   "licenseUrl": "",
   "frameworks": {
-    "dnx461": { },
+    "dnx46": { },
     "net461": {
       "frameworkAssemblies": {
         "System.Runtime": "4.0.20.0"
@@ -14,7 +14,7 @@
     }
   },
   "dependencies": {
-    "EntityFramework.SqlServer": "7.0.0-beta8",
+    "EntityFramework.MicrosoftSqlServer": "7.0.0-rc1-final",
     "Umbrella.Utilities": "1.0.0-*"
   }
 }
