--- a/General/Umbrella.Utilities/project.json
+++ b/General/Umbrella.Utilities/project.json
@@ -1,12 +1,12 @@
 {
-  "version": "1.0.0-rc1-build00002",
+  "version": "1.0.0-rc1-build00003",
   "description": "Umbrella.Utilities Class Library",
   "authors": [ "richardedwards" ],
   "tags": [ "" ],
   "projectUrl": "",
   "licenseUrl": "",
   "frameworks": {
-    "dnx461": {
+    "dnx46": {
       "frameworkAssemblies": {
         "System.Configuration": "4.0.0.0",
         "System.Drawing": "4.0.0.0",
@@ -22,8 +22,7 @@
     }
   },
   "dependencies": {
-    "log4net": "2.0.4",
-    "Newtonsoft.Json": "7.0.1",
-    "Ninject": "3.2.2"
+    "Microsoft.Extensions.Logging.Abstractions": "1.0.0-rc1-final",
+    "Newtonsoft.Json": "7.0.1"
   }
 }
