--- a/Legacy/src/Umbrella.Legacy.WebUtilities/project.json
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-rc1-build00002",
+  "version": "1.0.0-rc1-build00003",
   "description": "Umbrella.Legacy.WebUtilities Class Library",
   "authors": [ "richardedwards" ],
   "tags": [ "" ],
@@ -14,7 +14,7 @@
     }
   },
   "dependencies": {
-    "log4net": "2.0.4",
+    "log4net": "2.0.5",
     "Microsoft.AspNet.Identity.Owin": "2.2.1",
     "Microsoft.AspNet.Mvc": "5.2.3",
     "Microsoft.AspNet.WebApi": "5.2.3",
@@ -22,7 +22,9 @@
     "Microsoft.Owin": "3.0.1",
     "Microsoft.Owin.Host.SystemWeb": "3.0.1",
     "Microsoft.Owin.StaticFiles": "3.0.1",
+    "Umbrella.Legacy.Utilities": "1.0.0-*",
     "Umbrella.Utilities": "1.0.0-*",
+    "Umbrella.Utilities.log4net": "1.0.0-*",
     "Umbrella.WebUtilities": "1.0.0-*"
   },
   "resourceFiles": [
