--- a/Legacy/src/Umbrella.Legacy.WebUtilities/project.lock.json
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities/project.lock.json
@@ -277,18 +277,18 @@
           "lib/net40/Owin.dll": {}
         }
       },
-      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00004": {
+      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
           "Ninject": "3.2.2",
-          "Umbrella.Utilities": "1.0.0-rc1-build00004"
+          "Umbrella.Utilities": "1.0.0"
         },
         "frameworkAssemblies": [
           "System.Configuration"
         ]
       },
-      "Umbrella.Utilities/1.0.0-rc1-build00004": {
+      "Umbrella.Utilities/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -301,7 +301,7 @@
           "System.Runtime.Caching"
         ]
       },
-      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00004": {
+      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -309,7 +309,7 @@
           "Newtonsoft.Json": "8.0.2"
         }
       },
-      "Umbrella.WebUtilities/1.0.0-rc1-build00004": {
+      "Umbrella.WebUtilities/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -612,18 +612,18 @@
           "lib/net40/Owin.dll": {}
         }
       },
-      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00004": {
+      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
           "Ninject": "3.2.2",
-          "Umbrella.Utilities": "1.0.0-rc1-build00004"
+          "Umbrella.Utilities": "1.0.0"
         },
         "frameworkAssemblies": [
           "System.Configuration"
         ]
       },
-      "Umbrella.Utilities/1.0.0-rc1-build00004": {
+      "Umbrella.Utilities/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -636,7 +636,7 @@
           "System.Runtime.Caching"
         ]
       },
-      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00004": {
+      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -644,7 +644,7 @@
           "Newtonsoft.Json": "8.0.2"
         }
       },
-      "Umbrella.WebUtilities/1.0.0-rc1-build00004": {
+      "Umbrella.WebUtilities/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -947,18 +947,18 @@
           "lib/net40/Owin.dll": {}
         }
       },
-      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00004": {
+      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
           "Ninject": "3.2.2",
-          "Umbrella.Utilities": "1.0.0-rc1-build00004"
+          "Umbrella.Utilities": "1.0.0"
         },
         "frameworkAssemblies": [
           "System.Configuration"
         ]
       },
-      "Umbrella.Utilities/1.0.0-rc1-build00004": {
+      "Umbrella.Utilities/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -971,7 +971,7 @@
           "System.Runtime.Caching"
         ]
       },
-      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00004": {
+      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -979,7 +979,7 @@
           "Newtonsoft.Json": "8.0.2"
         }
       },
-      "Umbrella.WebUtilities/1.0.0-rc1-build00004": {
+      "Umbrella.WebUtilities/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1009,19 +1009,19 @@
     }
   },
   "libraries": {
-    "Umbrella.Legacy.Utilities/1.0.0-rc1-build00004": {
+    "Umbrella.Legacy.Utilities/1.0.0-rc1-build00005": {
       "type": "project",
       "path": "../Umbrella.Legacy.Utilities/project.json"
     },
-    "Umbrella.Utilities/1.0.0-rc1-build00004": {
+    "Umbrella.Utilities/1.0.0-rc1-build00005": {
       "type": "project",
       "path": "../../Core/Umbrella.Utilities/project.json"
     },
-    "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00004": {
+    "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00005": {
       "type": "project",
       "path": "../../Core/Umbrella.Utilities.Log4Net/project.json"
     },
-    "Umbrella.WebUtilities/1.0.0-rc1-build00004": {
+    "Umbrella.WebUtilities/1.0.0-rc1-build00005": {
       "type": "project",
       "path": "../../Core/Umbrella.WebUtilities/project.json"
     },
@@ -1371,9 +1371,9 @@
       "Microsoft.Owin.Host.SystemWeb >= 3.0.1",
       "Microsoft.Owin.StaticFiles >= 3.0.1",
       "Ninject >= 3.2.2",
-      "Umbrella.Legacy.Utilities >= 1.0.0-rc1-build00004",
+      "Umbrella.Legacy.Utilities >= 1.0.0-*",
       "Umbrella.Utilities.Log4Net >= 1.0.0-*",
-      "Umbrella.WebUtilities >= 1.0.0-rc1-build00004"
+      "Umbrella.WebUtilities >= 1.0.0-*"
     ],
     ".NETFramework,Version=v4.6.1": [
       "fx/System.ComponentModel.DataAnnotations >= 4.0.0",
