--- a/Legacy/src/Umbrella.Legacy.WebUtilities.DynamicImage/project.lock.json
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities.DynamicImage/project.lock.json
@@ -298,18 +298,18 @@
           "lib/net40/Owin.dll": {}
         }
       },
-      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00004": {
+      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
           "Ninject": "3.2.2",
-          "Umbrella.Utilities": "1.0.0-rc1-build00004"
+          "Umbrella.Utilities": "1.0.0"
         },
         "frameworkAssemblies": [
           "System.Configuration"
         ]
       },
-      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00004": {
+      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -322,16 +322,16 @@
           "Microsoft.Owin.Host.SystemWeb": "3.0.1",
           "Microsoft.Owin.StaticFiles": "3.0.1",
           "Ninject": "3.2.2",
-          "Umbrella.Legacy.Utilities": "1.0.0-rc1-build00004",
+          "Umbrella.Legacy.Utilities": "1.0.0",
           "Umbrella.Utilities.Log4Net": "1.0.0",
-          "Umbrella.WebUtilities": "1.0.0-rc1-build00004"
+          "Umbrella.WebUtilities": "1.0.0"
         },
         "frameworkAssemblies": [
           "System.ComponentModel.DataAnnotations",
           "System.Web"
         ]
       },
-      "Umbrella.Utilities/1.0.0-rc1-build00004": {
+      "Umbrella.Utilities/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -344,7 +344,7 @@
           "System.Runtime.Caching"
         ]
       },
-      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00004": {
+      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -352,7 +352,7 @@
           "Newtonsoft.Json": "8.0.2"
         }
       },
-      "Umbrella.WebUtilities/1.0.0-rc1-build00004": {
+      "Umbrella.WebUtilities/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -367,7 +367,7 @@
           "WindowsBase"
         ]
       },
-      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00004": {
+      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -690,18 +690,18 @@
           "lib/net40/Owin.dll": {}
         }
       },
-      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00004": {
+      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
           "Ninject": "3.2.2",
-          "Umbrella.Utilities": "1.0.0-rc1-build00004"
+          "Umbrella.Utilities": "1.0.0"
         },
         "frameworkAssemblies": [
           "System.Configuration"
         ]
       },
-      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00004": {
+      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -714,16 +714,16 @@
           "Microsoft.Owin.Host.SystemWeb": "3.0.1",
           "Microsoft.Owin.StaticFiles": "3.0.1",
           "Ninject": "3.2.2",
-          "Umbrella.Legacy.Utilities": "1.0.0-rc1-build00004",
+          "Umbrella.Legacy.Utilities": "1.0.0",
           "Umbrella.Utilities.Log4Net": "1.0.0",
-          "Umbrella.WebUtilities": "1.0.0-rc1-build00004"
+          "Umbrella.WebUtilities": "1.0.0"
         },
         "frameworkAssemblies": [
           "System.ComponentModel.DataAnnotations",
           "System.Web"
         ]
       },
-      "Umbrella.Utilities/1.0.0-rc1-build00004": {
+      "Umbrella.Utilities/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -736,7 +736,7 @@
           "System.Runtime.Caching"
         ]
       },
-      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00004": {
+      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -744,7 +744,7 @@
           "Newtonsoft.Json": "8.0.2"
         }
       },
-      "Umbrella.WebUtilities/1.0.0-rc1-build00004": {
+      "Umbrella.WebUtilities/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -759,7 +759,7 @@
           "WindowsBase"
         ]
       },
-      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00004": {
+      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1082,18 +1082,18 @@
           "lib/net40/Owin.dll": {}
         }
       },
-      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00004": {
+      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
           "Ninject": "3.2.2",
-          "Umbrella.Utilities": "1.0.0-rc1-build00004"
+          "Umbrella.Utilities": "1.0.0"
         },
         "frameworkAssemblies": [
           "System.Configuration"
         ]
       },
-      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00004": {
+      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1106,16 +1106,16 @@
           "Microsoft.Owin.Host.SystemWeb": "3.0.1",
           "Microsoft.Owin.StaticFiles": "3.0.1",
           "Ninject": "3.2.2",
-          "Umbrella.Legacy.Utilities": "1.0.0-rc1-build00004",
+          "Umbrella.Legacy.Utilities": "1.0.0",
           "Umbrella.Utilities.Log4Net": "1.0.0",
-          "Umbrella.WebUtilities": "1.0.0-rc1-build00004"
+          "Umbrella.WebUtilities": "1.0.0"
         },
         "frameworkAssemblies": [
           "System.ComponentModel.DataAnnotations",
           "System.Web"
         ]
       },
-      "Umbrella.Utilities/1.0.0-rc1-build00004": {
+      "Umbrella.Utilities/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1128,7 +1128,7 @@
           "System.Runtime.Caching"
         ]
       },
-      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00004": {
+      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1136,7 +1136,7 @@
           "Newtonsoft.Json": "8.0.2"
         }
       },
-      "Umbrella.WebUtilities/1.0.0-rc1-build00004": {
+      "Umbrella.WebUtilities/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1151,7 +1151,7 @@
           "WindowsBase"
         ]
       },
-      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00004": {
+      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00005": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1180,27 +1180,27 @@
     }
   },
   "libraries": {
-    "Umbrella.Legacy.Utilities/1.0.0-rc1-build00004": {
+    "Umbrella.Legacy.Utilities/1.0.0-rc1-build00005": {
       "type": "project",
       "path": "../Umbrella.Legacy.Utilities/project.json"
     },
-    "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00004": {
+    "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00005": {
       "type": "project",
       "path": "../Umbrella.Legacy.WebUtilities/project.json"
     },
-    "Umbrella.Utilities/1.0.0-rc1-build00004": {
+    "Umbrella.Utilities/1.0.0-rc1-build00005": {
       "type": "project",
       "path": "../../Core/Umbrella.Utilities/project.json"
     },
-    "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00004": {
+    "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00005": {
       "type": "project",
       "path": "../../Core/Umbrella.Utilities.Log4Net/project.json"
     },
-    "Umbrella.WebUtilities/1.0.0-rc1-build00004": {
+    "Umbrella.WebUtilities/1.0.0-rc1-build00005": {
       "type": "project",
       "path": "../../Core/Umbrella.WebUtilities/project.json"
     },
-    "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00004": {
+    "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00005": {
       "type": "project",
       "path": "../../Core/Umbrella.WebUtilities.DynamicImage/project.json"
     },
