Fixes Migration of some code to new logging abstraction (WIP) Updated build to build00011

--- a/Legacy/src/Umbrella.Legacy.WebUtilities/project.lock.json
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities/project.lock.json
@@ -277,7 +277,16 @@
           "lib/net40/Owin.dll": {}
         }
       },
-      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00005": {
+      "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00011": {
+        "type": "project",
+        "framework": ".NETFramework,Version=v4.6.1",
+        "dependencies": {
+          "log4net": "2.0.5",
+          "Microsoft.Extensions.Logging.Abstractions": "1.0.0-rc1-final",
+          "Newtonsoft.Json": "8.0.2"
+        }
+      },
+      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -288,7 +297,7 @@
           "System.Configuration"
         ]
       },
-      "Umbrella.Utilities/1.0.0-rc1-build00005": {
+      "Umbrella.Utilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -301,7 +310,7 @@
           "System.Runtime.Caching"
         ]
       },
-      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00005": {
+      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -309,7 +318,7 @@
           "Newtonsoft.Json": "8.0.2"
         }
       },
-      "Umbrella.WebUtilities/1.0.0-rc1-build00005": {
+      "Umbrella.WebUtilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -612,7 +621,16 @@
           "lib/net40/Owin.dll": {}
         }
       },
-      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00005": {
+      "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00011": {
+        "type": "project",
+        "framework": ".NETFramework,Version=v4.6.1",
+        "dependencies": {
+          "log4net": "2.0.5",
+          "Microsoft.Extensions.Logging.Abstractions": "1.0.0-rc1-final",
+          "Newtonsoft.Json": "8.0.2"
+        }
+      },
+      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -623,7 +641,7 @@
           "System.Configuration"
         ]
       },
-      "Umbrella.Utilities/1.0.0-rc1-build00005": {
+      "Umbrella.Utilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -636,7 +654,7 @@
           "System.Runtime.Caching"
         ]
       },
-      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00005": {
+      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -644,7 +662,7 @@
           "Newtonsoft.Json": "8.0.2"
         }
       },
-      "Umbrella.WebUtilities/1.0.0-rc1-build00005": {
+      "Umbrella.WebUtilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -947,7 +965,16 @@
           "lib/net40/Owin.dll": {}
         }
       },
-      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00005": {
+      "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00011": {
+        "type": "project",
+        "framework": ".NETFramework,Version=v4.6.1",
+        "dependencies": {
+          "log4net": "2.0.5",
+          "Microsoft.Extensions.Logging.Abstractions": "1.0.0-rc1-final",
+          "Newtonsoft.Json": "8.0.2"
+        }
+      },
+      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -958,7 +985,7 @@
           "System.Configuration"
         ]
       },
-      "Umbrella.Utilities/1.0.0-rc1-build00005": {
+      "Umbrella.Utilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -971,7 +998,7 @@
           "System.Runtime.Caching"
         ]
       },
-      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00005": {
+      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -979,7 +1006,7 @@
           "Newtonsoft.Json": "8.0.2"
         }
       },
-      "Umbrella.WebUtilities/1.0.0-rc1-build00005": {
+      "Umbrella.WebUtilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1009,19 +1036,23 @@
     }
   },
   "libraries": {
-    "Umbrella.Legacy.Utilities/1.0.0-rc1-build00005": {
+    "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00011": {
+      "type": "project",
+      "path": "../../Core/Umbrella.Extensions.Logging.Log4Net/project.json"
+    },
+    "Umbrella.Legacy.Utilities/1.0.0-rc1-build00011": {
       "type": "project",
       "path": "../Umbrella.Legacy.Utilities/project.json"
     },
-    "Umbrella.Utilities/1.0.0-rc1-build00005": {
+    "Umbrella.Utilities/1.0.0-rc1-build00011": {
       "type": "project",
       "path": "../../Core/Umbrella.Utilities/project.json"
     },
-    "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00005": {
+    "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00011": {
       "type": "project",
       "path": "../../Core/Umbrella.Utilities.Log4Net/project.json"
     },
-    "Umbrella.WebUtilities/1.0.0-rc1-build00005": {
+    "Umbrella.WebUtilities/1.0.0-rc1-build00011": {
       "type": "project",
       "path": "../../Core/Umbrella.WebUtilities/project.json"
     },
@@ -1371,6 +1402,7 @@
       "Microsoft.Owin.Host.SystemWeb >= 3.0.1",
       "Microsoft.Owin.StaticFiles >= 3.0.1",
       "Ninject >= 3.2.2",
+      "Umbrella.Extensions.Logging.Log4Net >= 1.0.0-*",
       "Umbrella.Legacy.Utilities >= 1.0.0-*",
       "Umbrella.Utilities.Log4Net >= 1.0.0-*",
       "Umbrella.WebUtilities >= 1.0.0-*"
