--- a/N2CMS/src/Umbrella.N2/project.lock.json
+++ b/N2CMS/src/Umbrella.N2/project.lock.json
@@ -401,7 +401,16 @@
           "lib/20/ICSharpCode.SharpZipLib.dll": {}
         }
       },
-      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00007": {
+      "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00011": {
+        "type": "project",
+        "framework": ".NETFramework,Version=v4.6.1",
+        "dependencies": {
+          "log4net": "2.0.5",
+          "Microsoft.Extensions.Logging.Abstractions": "1.0.0-rc1-final",
+          "Newtonsoft.Json": "8.0.2"
+        }
+      },
+      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -412,7 +421,7 @@
           "System.Configuration"
         ]
       },
-      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00007": {
+      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -425,6 +434,7 @@
           "Microsoft.Owin.Host.SystemWeb": "3.0.1",
           "Microsoft.Owin.StaticFiles": "3.0.1",
           "Ninject": "3.2.2",
+          "Umbrella.Extensions.Logging.Log4Net": "1.0.0",
           "Umbrella.Legacy.Utilities": "1.0.0",
           "Umbrella.Utilities.Log4Net": "1.0.0",
           "Umbrella.WebUtilities": "1.0.0"
@@ -434,7 +444,7 @@
           "System.Web"
         ]
       },
-      "Umbrella.Legacy.WebUtilities.DynamicImage/1.0.0-rc1-build00007": {
+      "Umbrella.Legacy.WebUtilities.DynamicImage/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -449,7 +459,7 @@
           "System.Web"
         ]
       },
-      "Umbrella.Utilities/1.0.0-rc1-build00007": {
+      "Umbrella.Utilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -462,7 +472,7 @@
           "System.Runtime.Caching"
         ]
       },
-      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00007": {
+      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -470,7 +480,7 @@
           "Newtonsoft.Json": "8.0.2"
         }
       },
-      "Umbrella.WebUtilities/1.0.0-rc1-build00007": {
+      "Umbrella.WebUtilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -485,7 +495,7 @@
           "WindowsBase"
         ]
       },
-      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00007": {
+      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -911,7 +921,16 @@
           "lib/20/ICSharpCode.SharpZipLib.dll": {}
         }
       },
-      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00007": {
+      "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00011": {
+        "type": "project",
+        "framework": ".NETFramework,Version=v4.6.1",
+        "dependencies": {
+          "log4net": "2.0.5",
+          "Microsoft.Extensions.Logging.Abstractions": "1.0.0-rc1-final",
+          "Newtonsoft.Json": "8.0.2"
+        }
+      },
+      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -922,7 +941,7 @@
           "System.Configuration"
         ]
       },
-      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00007": {
+      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -935,6 +954,7 @@
           "Microsoft.Owin.Host.SystemWeb": "3.0.1",
           "Microsoft.Owin.StaticFiles": "3.0.1",
           "Ninject": "3.2.2",
+          "Umbrella.Extensions.Logging.Log4Net": "1.0.0",
           "Umbrella.Legacy.Utilities": "1.0.0",
           "Umbrella.Utilities.Log4Net": "1.0.0",
           "Umbrella.WebUtilities": "1.0.0"
@@ -944,7 +964,7 @@
           "System.Web"
         ]
       },
-      "Umbrella.Legacy.WebUtilities.DynamicImage/1.0.0-rc1-build00007": {
+      "Umbrella.Legacy.WebUtilities.DynamicImage/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -959,7 +979,7 @@
           "System.Web"
         ]
       },
-      "Umbrella.Utilities/1.0.0-rc1-build00007": {
+      "Umbrella.Utilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -972,7 +992,7 @@
           "System.Runtime.Caching"
         ]
       },
-      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00007": {
+      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -980,7 +1000,7 @@
           "Newtonsoft.Json": "8.0.2"
         }
       },
-      "Umbrella.WebUtilities/1.0.0-rc1-build00007": {
+      "Umbrella.WebUtilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -995,7 +1015,7 @@
           "WindowsBase"
         ]
       },
-      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00007": {
+      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1421,7 +1441,16 @@
           "lib/20/ICSharpCode.SharpZipLib.dll": {}
         }
       },
-      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00007": {
+      "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00011": {
+        "type": "project",
+        "framework": ".NETFramework,Version=v4.6.1",
+        "dependencies": {
+          "log4net": "2.0.5",
+          "Microsoft.Extensions.Logging.Abstractions": "1.0.0-rc1-final",
+          "Newtonsoft.Json": "8.0.2"
+        }
+      },
+      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1432,7 +1461,7 @@
           "System.Configuration"
         ]
       },
-      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00007": {
+      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1445,6 +1474,7 @@
           "Microsoft.Owin.Host.SystemWeb": "3.0.1",
           "Microsoft.Owin.StaticFiles": "3.0.1",
           "Ninject": "3.2.2",
+          "Umbrella.Extensions.Logging.Log4Net": "1.0.0",
           "Umbrella.Legacy.Utilities": "1.0.0",
           "Umbrella.Utilities.Log4Net": "1.0.0",
           "Umbrella.WebUtilities": "1.0.0"
@@ -1454,7 +1484,7 @@
           "System.Web"
         ]
       },
-      "Umbrella.Legacy.WebUtilities.DynamicImage/1.0.0-rc1-build00007": {
+      "Umbrella.Legacy.WebUtilities.DynamicImage/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1469,7 +1499,7 @@
           "System.Web"
         ]
       },
-      "Umbrella.Utilities/1.0.0-rc1-build00007": {
+      "Umbrella.Utilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1482,7 +1512,7 @@
           "System.Runtime.Caching"
         ]
       },
-      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00007": {
+      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1490,7 +1520,7 @@
           "Newtonsoft.Json": "8.0.2"
         }
       },
-      "Umbrella.WebUtilities/1.0.0-rc1-build00007": {
+      "Umbrella.WebUtilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1505,7 +1535,7 @@
           "WindowsBase"
         ]
       },
-      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00007": {
+      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1534,31 +1564,35 @@
     }
   },
   "libraries": {
-    "Umbrella.Legacy.Utilities/1.0.0-rc1-build00007": {
+    "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00011": {
+      "type": "project",
+      "path": "../../Core/Umbrella.Extensions.Logging.Log4Net/project.json"
+    },
+    "Umbrella.Legacy.Utilities/1.0.0-rc1-build00011": {
       "type": "project",
       "path": "../../Legacy/Umbrella.Legacy.Utilities/project.json"
     },
-    "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00007": {
+    "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00011": {
       "type": "project",
       "path": "../../Legacy/Umbrella.Legacy.WebUtilities/project.json"
     },
-    "Umbrella.Legacy.WebUtilities.DynamicImage/1.0.0-rc1-build00007": {
+    "Umbrella.Legacy.WebUtilities.DynamicImage/1.0.0-rc1-build00011": {
       "type": "project",
       "path": "../../Legacy/Umbrella.Legacy.WebUtilities.DynamicImage/project.json"
     },
-    "Umbrella.Utilities/1.0.0-rc1-build00007": {
+    "Umbrella.Utilities/1.0.0-rc1-build00011": {
       "type": "project",
       "path": "../../Core/Umbrella.Utilities/project.json"
     },
-    "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00007": {
+    "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00011": {
       "type": "project",
       "path": "../../Core/Umbrella.Utilities.Log4Net/project.json"
     },
-    "Umbrella.WebUtilities/1.0.0-rc1-build00007": {
+    "Umbrella.WebUtilities/1.0.0-rc1-build00011": {
       "type": "project",
       "path": "../../Core/Umbrella.WebUtilities/project.json"
     },
-    "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00007": {
+    "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00011": {
       "type": "project",
       "path": "../../Core/Umbrella.WebUtilities.DynamicImage/project.json"
     },
