--- a/Legacy/src/Umbrella.Legacy.WebUtilities.DynamicImage/project.lock.json
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities.DynamicImage/project.lock.json
@@ -304,7 +304,16 @@
           "lib/net40/Owin.dll": {}
         }
       },
-      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00007": {
+      "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00011": {
+        "type": "project",
+        "framework": ".NETFramework,Version=v4.6.1",
+        "dependencies": {
+          "log4net": "2.0.5",
+          "Microsoft.Extensions.Logging.Abstractions": "1.0.0-rc1-final",
+          "Newtonsoft.Json": "8.0.2"
+        }
+      },
+      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -315,7 +324,7 @@
           "System.Configuration"
         ]
       },
-      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00007": {
+      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -328,6 +337,7 @@
           "Microsoft.Owin.Host.SystemWeb": "3.0.1",
           "Microsoft.Owin.StaticFiles": "3.0.1",
           "Ninject": "3.2.2",
+          "Umbrella.Extensions.Logging.Log4Net": "1.0.0",
           "Umbrella.Legacy.Utilities": "1.0.0",
           "Umbrella.Utilities.Log4Net": "1.0.0",
           "Umbrella.WebUtilities": "1.0.0"
@@ -337,7 +347,7 @@
           "System.Web"
         ]
       },
-      "Umbrella.Utilities/1.0.0-rc1-build00007": {
+      "Umbrella.Utilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -350,7 +360,7 @@
           "System.Runtime.Caching"
         ]
       },
-      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00007": {
+      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -358,7 +368,7 @@
           "Newtonsoft.Json": "8.0.2"
         }
       },
-      "Umbrella.WebUtilities/1.0.0-rc1-build00007": {
+      "Umbrella.WebUtilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -373,7 +383,7 @@
           "WindowsBase"
         ]
       },
-      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00007": {
+      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -702,7 +712,16 @@
           "lib/net40/Owin.dll": {}
         }
       },
-      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00007": {
+      "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00011": {
+        "type": "project",
+        "framework": ".NETFramework,Version=v4.6.1",
+        "dependencies": {
+          "log4net": "2.0.5",
+          "Microsoft.Extensions.Logging.Abstractions": "1.0.0-rc1-final",
+          "Newtonsoft.Json": "8.0.2"
+        }
+      },
+      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -713,7 +732,7 @@
           "System.Configuration"
         ]
       },
-      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00007": {
+      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -726,6 +745,7 @@
           "Microsoft.Owin.Host.SystemWeb": "3.0.1",
           "Microsoft.Owin.StaticFiles": "3.0.1",
           "Ninject": "3.2.2",
+          "Umbrella.Extensions.Logging.Log4Net": "1.0.0",
           "Umbrella.Legacy.Utilities": "1.0.0",
           "Umbrella.Utilities.Log4Net": "1.0.0",
           "Umbrella.WebUtilities": "1.0.0"
@@ -735,7 +755,7 @@
           "System.Web"
         ]
       },
-      "Umbrella.Utilities/1.0.0-rc1-build00007": {
+      "Umbrella.Utilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -748,7 +768,7 @@
           "System.Runtime.Caching"
         ]
       },
-      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00007": {
+      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -756,7 +776,7 @@
           "Newtonsoft.Json": "8.0.2"
         }
       },
-      "Umbrella.WebUtilities/1.0.0-rc1-build00007": {
+      "Umbrella.WebUtilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -771,7 +791,7 @@
           "WindowsBase"
         ]
       },
-      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00007": {
+      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1100,7 +1120,16 @@
           "lib/net40/Owin.dll": {}
         }
       },
-      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00007": {
+      "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00011": {
+        "type": "project",
+        "framework": ".NETFramework,Version=v4.6.1",
+        "dependencies": {
+          "log4net": "2.0.5",
+          "Microsoft.Extensions.Logging.Abstractions": "1.0.0-rc1-final",
+          "Newtonsoft.Json": "8.0.2"
+        }
+      },
+      "Umbrella.Legacy.Utilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1111,7 +1140,7 @@
           "System.Configuration"
         ]
       },
-      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00007": {
+      "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1124,6 +1153,7 @@
           "Microsoft.Owin.Host.SystemWeb": "3.0.1",
           "Microsoft.Owin.StaticFiles": "3.0.1",
           "Ninject": "3.2.2",
+          "Umbrella.Extensions.Logging.Log4Net": "1.0.0",
           "Umbrella.Legacy.Utilities": "1.0.0",
           "Umbrella.Utilities.Log4Net": "1.0.0",
           "Umbrella.WebUtilities": "1.0.0"
@@ -1133,7 +1163,7 @@
           "System.Web"
         ]
       },
-      "Umbrella.Utilities/1.0.0-rc1-build00007": {
+      "Umbrella.Utilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1146,7 +1176,7 @@
           "System.Runtime.Caching"
         ]
       },
-      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00007": {
+      "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1154,7 +1184,7 @@
           "Newtonsoft.Json": "8.0.2"
         }
       },
-      "Umbrella.WebUtilities/1.0.0-rc1-build00007": {
+      "Umbrella.WebUtilities/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1169,7 +1199,7 @@
           "WindowsBase"
         ]
       },
-      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00007": {
+      "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00011": {
         "type": "project",
         "framework": ".NETFramework,Version=v4.6.1",
         "dependencies": {
@@ -1198,27 +1228,31 @@
     }
   },
   "libraries": {
-    "Umbrella.Legacy.Utilities/1.0.0-rc1-build00007": {
+    "Umbrella.Extensions.Logging.Log4Net/1.0.0-rc1-build00011": {
+      "type": "project",
+      "path": "../../Core/Umbrella.Extensions.Logging.Log4Net/project.json"
+    },
+    "Umbrella.Legacy.Utilities/1.0.0-rc1-build00011": {
       "type": "project",
       "path": "../Umbrella.Legacy.Utilities/project.json"
     },
-    "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00007": {
+    "Umbrella.Legacy.WebUtilities/1.0.0-rc1-build00011": {
       "type": "project",
       "path": "../Umbrella.Legacy.WebUtilities/project.json"
     },
-    "Umbrella.Utilities/1.0.0-rc1-build00007": {
+    "Umbrella.Utilities/1.0.0-rc1-build00011": {
       "type": "project",
       "path": "../../Core/Umbrella.Utilities/project.json"
     },
-    "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00007": {
+    "Umbrella.Utilities.Log4Net/1.0.0-rc1-build00011": {
       "type": "project",
       "path": "../../Core/Umbrella.Utilities.Log4Net/project.json"
     },
-    "Umbrella.WebUtilities/1.0.0-rc1-build00007": {
+    "Umbrella.WebUtilities/1.0.0-rc1-build00011": {
       "type": "project",
       "path": "../../Core/Umbrella.WebUtilities/project.json"
     },
-    "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00007": {
+    "Umbrella.WebUtilities.DynamicImage/1.0.0-rc1-build00011": {
       "type": "project",
       "path": "../../Core/Umbrella.WebUtilities.DynamicImage/project.json"
     },
