--- a/Legacy/src/Umbrella.Legacy.WebUtilities/project.json
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-rc1-build00010",
+  "version": "1.0.0-rc1-build00011",
   "description": "Umbrella.Legacy.WebUtilities Class Library",
   "authors": [ "richardedwards" ],
   "tags": [ "" ],
@@ -23,6 +23,7 @@
     "Microsoft.Owin.Host.SystemWeb": "3.0.1",
     "Microsoft.Owin.StaticFiles": "3.0.1",
     "Ninject": "3.2.2",
+    "Umbrella.Extensions.Logging.Log4Net": "1.0.0-*",
     "Umbrella.Legacy.Utilities": "1.0.0-*",
     "Umbrella.Utilities.Log4Net": "1.0.0-*",
     "Umbrella.WebUtilities": "1.0.0-*"
